0908 화요일 1교시