@@ -2,8 +2,10 @@ package com.basic.admin.service;
 
 import com.basic.admin.controller.dto.StudentDTO;
 import com.basic.admin.entity.Student;
+import com.basic.admin.entity.StudentDetail;
 import com.basic.admin.exception.BusinessException;
 import com.basic.admin.exception.ErrorCode;
+import com.basic.admin.repository.StudentDetailRepository;
 import com.basic.admin.repository.StudentRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -17,25 +19,31 @@ import java.util.List;
 public class StudentService {
 
     private final StudentRepository studentRepository;
+    private final StudentDetailRepository studentDetailRepository;
 
     public List<StudentDTO.Response> getAllStudents() {
-        return studentRepository.findAll()
-                //List<Student> => Stream<Student>
-                .stream()
-                //Stream<Student> => Stream<StudentDTO.Response>
-                .map(entity -> StudentDTO.Response.fromEntity(entity))
-                //.map(StudentDTO.Response::fromEntity)
-                //Stream<StudentDTO.Response> => List<StudentDTO.Response>
-                .toList();
-    }
+//        return studentRepository.findAll()
+//                .stream()
+//                .map(studentEntity -> StudentDTO.Response.fromEntity(studentEntity) )
+//                //.map(StudentDTO.Response::fromEntity)
+//                .toList();
+        //.collect(Collectors.toList());
 
+        //findAll() 대신 Fetch Join 을 사용하여 N+1 문제를 해결한다
+        return studentRepository.findAllWithStudentDetail()
+                .stream()
+                .map(StudentDTO.Response::fromEntity)
+                .toList();
+
+    }
+    //PK로 학생 조회 (FETCH JOIN)
     public StudentDTO.Response getStudentById(Long id) {
-        Student student = studentRepository.findById(id)
+        Student student = studentRepository.findByIdWithStudentDetail(id)
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
                         "Student", "id", id));
         return StudentDTO.Response.fromEntity(student);
     }
-
+    //학번으로 학생 조회
     public StudentDTO.Response getStudentByStudentNumber(String studentNumber) {
         Student student = studentRepository.findByStudentNumber(studentNumber)
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
@@ -51,12 +59,39 @@ public class StudentService {
                     request.getStudentNumber());
         }
 
+        // Validate email is not already in use (if provided)
+        if (hasEmailAndExists(request.getDetailRequest())) {
+            throw new BusinessException(ErrorCode.EMAIL_DUPLICATE,
+                    request.getDetailRequest().getEmail());
+        }
+
+        // Validate phone number is not already in use
+        if (hasDetailAndPhoneNumberExists(request.getDetailRequest())) {
+            throw new BusinessException(ErrorCode.PHONE_NUMBER_DUPLICATE,
+                    request.getDetailRequest().getPhoneNumber());
+        }
+
         // Create student 엔티티 생성
         Student student = Student.builder()
                 .name(request.getName())  //이름
                 .studentNumber(request.getStudentNumber())  //학번
                 .build();
 
+        // Create StudentDetail 엔티티 생성
+        if (request.getDetailRequest() != null) {
+            StudentDetail studentDetail = StudentDetail.builder()
+                    .address(request.getDetailRequest().getAddress()) //주소
+                    .phoneNumber(request.getDetailRequest().getPhoneNumber()) //전화번호
+                    .email(request.getDetailRequest().getEmail()) //이메일
+                    .dateOfBirth(request.getDetailRequest().getDateOfBirth()) //생년월일
+                    //생성하는 StudentDetail과 연관된 Student 엔티티 객체를 저장
+                    .student(student)
+                    .build();
+            //양방향 연관관계이므로 Student와 연관된 StduentDetail 엔티티 객체를 저장
+            student.setStudentDetail(studentDetail);
+        }
+
+        // Student와 StudentDetail의 라이프사이클이 동일하므로 Student만 저장합
         Student savedStudent = studentRepository.save(student);
         // Student를 StudentDTO.Response 로 변환
         return StudentDTO.Response.fromEntity(savedStudent);
@@ -69,7 +104,7 @@ public class StudentService {
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
                         "Student", "id", id));
 
-        // 저장된 학번(student.getStudentNumber())과 요청한 학번(request.getStudentNumber())이 일치하지 않으면
+        // 저장된 학번과 요청한 학번이 일치하지 않으면
         if (!student.getStudentNumber().equals(request.getStudentNumber()) &&
                 //요청한 학번이 중복되는지 체크하기 위해서 해당학번으로 Student 조회
                 studentRepository.existsByStudentNumber(request.getStudentNumber())) {
@@ -81,10 +116,43 @@ public class StudentService {
         student.setName(request.getName());
         student.setStudentNumber(request.getStudentNumber());
 
+        // Update student detail if provided
+        if (request.getDetailRequest() != null) {
+            //Student가 연관된 StudentDetail 객체를 가져오기
+            StudentDetail studentDetail = student.getStudentDetail();
+
+            // Create new detail if not exists ( 저장된 StudentDetail 정보가 없을 경우 )
+            if (studentDetail == null) {
+                // 새로운 StudentDetail 객체생성
+                studentDetail = new StudentDetail();
+                //연관된 Student 객체 저장
+                studentDetail.setStudent(student);
+                //연관된 StudenDetail 객체 저장
+                student.setStudentDetail(studentDetail);
+            }
+
+            // Validate email is not already in use (if changing)
+            if (isEmailChangingAndExists(studentDetail, request.getDetailRequest())) {
+                throw new BusinessException(ErrorCode.EMAIL_DUPLICATE,
+                        request.getDetailRequest().getEmail());
+            }
+
+            // Validate phone number is not already in use (if changing)
+            if (isPhoneNumberChangingAndExists(studentDetail, request.getDetailRequest())) {
+                throw new BusinessException(ErrorCode.PHONE_NUMBER_DUPLICATE,
+                        request.getDetailRequest().getPhoneNumber());
+            }
+
+            // Update detail fields
+            studentDetail.setAddress(request.getDetailRequest().getAddress());
+            studentDetail.setPhoneNumber(request.getDetailRequest().getPhoneNumber());
+            studentDetail.setEmail(request.getDetailRequest().getEmail());
+            studentDetail.setDateOfBirth(request.getDetailRequest().getDateOfBirth());
+        }
+
         // Save and return updated student
-//        Student updatedStudent = studentRepository.save(student);
-//        return StudentDTO.Response.fromEntity(updatedStudent);
-        return StudentDTO.Response.fromEntity(student);
+        Student updatedStudent = studentRepository.save(student);
+        return StudentDTO.Response.fromEntity(updatedStudent);
     }
 
     @Transactional
@@ -94,5 +162,35 @@ public class StudentService {
                     "Student", "id", id);
         }
         studentRepository.deleteById(id);
+    }
+
+    // Helper methods to improve readability and reduce duplication
+
+    private boolean hasEmailAndExists(StudentDTO.StudentDetailDTO detailRequest) {
+        return detailRequest != null &&
+                detailRequest.getEmail() != null &&
+                !detailRequest.getEmail().isEmpty() &&
+                studentDetailRepository.existsByEmail(detailRequest.getEmail());
+    }
+
+    private boolean hasDetailAndPhoneNumberExists(StudentDTO.StudentDetailDTO detailRequest) {
+        return detailRequest != null &&
+                studentDetailRepository.existsByPhoneNumber(detailRequest.getPhoneNumber());
+    }
+
+    private boolean isEmailChangingAndExists(StudentDetail currentDetail,
+                                             StudentDTO.StudentDetailDTO newDetail) {
+        return newDetail.getEmail() != null &&
+                !newDetail.getEmail().isEmpty() &&
+                (currentDetail.getEmail() == null ||
+                        !currentDetail.getEmail().equals(newDetail.getEmail())) &&
+                studentDetailRepository.existsByEmail(newDetail.getEmail());
+    }
+
+    private boolean isPhoneNumberChangingAndExists(StudentDetail currentDetail,
+                                                   StudentDTO.StudentDetailDTO newDetail) {
+        return (currentDetail.getPhoneNumber() == null ||
+                !currentDetail.getPhoneNumber().equals(newDetail.getPhoneNumber())) &&
+                studentDetailRepository.existsByPhoneNumber(newDetail.getPhoneNumber());
     }
 }
